Kubernetes_Server/Template/Devops/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx-deployment
  clusterIP: None
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
